SFDCProject/src/objects/Utility_Delay_Days__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Delay_Days__c</fullName>
        <label>Utility Delay Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Utility Delay Days</label>
</CustomObject>